# hf_audio_tutorial

./: 02- Audio Exercise.ipynb  02-5 Audio Exercise.ipynb  04_4_fine_tune_music_cls.ipynb  04_6_hands_on.ipynb  05_2_.ipynb  05_2_pretrained_model_asr.ipynb  README.md  how_to_generate_text_using_different_decoding_methods.ipynb  pyproject.toml
FAU_PCP/: 08_signals_and_sampling.ipynb  09_dft_and_fft.ipynb  09_discrete_fourier_transform.ipynb  signal.py
