[project]
name = "hf-audio-tutorial"
version = "0.1.0"
description = ""
authors = [
    {name = "Wen-Kai Chung",email = "wkaichungtw@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "transformers (>=4.48.2,<5.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "torchaudio (>=2.6.0,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "datasets (>=3.2.0,<4.0.0)",
    "ipywidgets (>=8.1.5,<9.0.0)",
    "soundfile (>=0.13.1,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
torch = {source = "pytorch-gpu"}
torchvision = {source = "pytorch-gpu"}
torchaudio = {source = "pytorch-gpu"}


[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"